update read me to include relative links

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         <nav class="header flex container relative">
             <!-- main brand logo -->
 
-            <a class="brand grid" href="/index.html">
-                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+            <a class="brand grid" href="./index.html">
+                <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
                 <span class='brand_solutions'>Solutions</span>
@@ -30,10 +30,10 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="/index.html">Home</a></li>
+                <li><a class="nav_item" href="./index.html">Home</a></li>
                 <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/services.html">Services</a></li>
-                <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a class="nav_item" href="./services.html">Services</a></li>
+                <li><a class="nav_item" href="./projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -110,7 +110,7 @@
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
-                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -118,7 +118,7 @@
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
-                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -127,7 +127,7 @@
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
-                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -136,7 +136,7 @@
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">TGet the software your business needs with our customized software
                         development services.</span>
-                    <a href="services.html" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./services.html" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -208,17 +208,17 @@
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
                 <div class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
-                    <a class="brand" href="/index.html">
+                    <img src="./assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <a class="brand" href="./index.html">
                         <span>ByteSized</span><br> Solutions
                     </a>
                 </div>
                 <ul class=" footer_nav_items flex row">
                     <li class="footer_nav_items_title">Navigation</li>
-                    <li><a class="nav_item" href="/index.html">Home</a></li>
-                    <li><a class="nav_item" href="/about.html">About</a></li>
-                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                    <li><a class="nav_item" href="./index.html">Home</a></li>
+                    <li><a class="nav_item" href="./about.html">About</a></li>
+                    <li><a class="nav_item" href="./about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="./projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
