--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- main brand logo -->
 
             <a class="brand grid" href="/index.html">
-                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+                <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
                 <span class='brand_solutions'>Solutions</span>
@@ -31,10 +31,10 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a aria-current="page" class="nav_item" href="/index.html">Home</a></li>
-                <li><a class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/services.html">Services</a></li>
-                <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a aria-current="page" class="nav_item" href="./index.html">Home</a></li>
+                <li><a class="nav_item" href="./about.html">About</a></li>
+                <li><a class="nav_item" href="./services.html">Services</a></li>
+                <li><a class="nav_item" href="./projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -59,7 +59,7 @@
                 stay ahead of the game in the ever-evolving digital landscape. We understand that technology can be both
                 a blessing and a curse for businesses, which is why our goal is to provide seamless and efficient IT
                 services that keep your company running smoothly and securely.</p>
-            <a href="about.html" class="btn btn_sec">Read more about us <i class="fa fa-arrow-right"></i></a>
+            <a href="./about.html" class="btn btn_sec">Read more about us <i class="fa fa-arrow-right"></i></a>
 
 
         </section>
@@ -76,7 +76,7 @@
                     <h3 class="card_title">Cloud Computing Solutions</h3>
                     <span class="card_text">Take advantage of the latest technology with our cloud computing
                         solutions, designed to increase efficiency and reduce costs.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
 
                 </div>
@@ -86,7 +86,7 @@
                     <h3 class="card_title">Cyber Security and Data Protection</h3>
                     <span class="card_text">Keep your company's sensitive information secure with our
                         comprehensive cyber security solutions.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -94,7 +94,7 @@
                     <h3 class="card_title">Network Design and Implementation</h3>
                     <span class="card_text">Ensure a seamless and reliable network with our expert design and
                         implementation services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -103,7 +103,7 @@
                     <h3 class="card_title">Managed IT Services</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -112,7 +112,7 @@
                     <h3 class="card_title">Software Development and Customization</h3>
                     <span class="card_text">Get the software your business needs with our customized software
                         development services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class=" card">
@@ -120,7 +120,7 @@
                     <h3 class="card_title">QA & Testing</h3>
                     <span class="card_text">Ensure the quality and reliability of your software with our
                         thorough quality assurance and testing services.</span>
-                    <a href="about.html#services" class="btn btn_sec card_btn absolute">Read more <i
+                    <a href="./about.html#services" class="btn btn_sec card_btn absolute">Read more <i
                             class="fa fa-arrow-right"></i></a>
                 </div>
 
@@ -195,7 +195,7 @@
             <!-- projects cards -->
             <div class="case_carousel flex row">
                 <div class="case_card grid">
-                    <img class="card_image" src="/assets/images/video_edit.jpg"
+                    <img class="card_image" src="./assets/images/video_edit.jpg"
                         alt="image of video editing software program on an ultra wide screen">
 
                     <section class="card_article">
@@ -206,12 +206,12 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                        <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card grid">
-                    <img class="card_image" src="/assets/images/server.jpg"
+                    <img class="card_image" src="./assets/images/server.jpg"
                         alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
@@ -222,12 +222,12 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                        <a href="/about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card grid">
-                    <img class="card_image" src="/assets/images/website.jpg"
+                    <img class="card_image" src="./assets/images/website.jpg"
                         alt="image of a laptop showing a website on the screen. In the background is an imac showing the same website">
                     <section class="card_article">
                         <h3 class="card_title">SoundBeetle Music</h3>
@@ -238,7 +238,7 @@
                             robust and scalable application that would meet the needs of their growing business and
                             customer base. With the help of ByteSized Solutions, they were able to turn their vision
                             into a reality.</span>
-                        <a href="/about.html#services" class="btn btn_sec card_btn">Read more <i
+                        <a href="./about.html#services" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -299,17 +299,17 @@
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
                 <div class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <img src="./assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
                     <a class="brand" href="/index.html">
                         <span>ByteSized</span><br> Solutions
                     </a>
                 </div>
                 <ul class=" footer_nav_items flex row">
                     <li class="footer_nav_items_title">Navigation</li>
-                    <li><a class="nav_item" href="/index.html">Home</a></li>
-                    <li><a class="nav_item" href="/about.html">About</a></li>
-                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                    <li><a class="nav_item" href="./index.html">Home</a></li>
+                    <li><a class="nav_item" href="./about.html">About</a></li>
+                    <li><a class="nav_item" href="./about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="./projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
