--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
         <nav class="header flex container relative">
             <!-- main brand logo -->
 
-            <a class="brand grid" href="/index.html">
-                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+            <a class="brand grid" href="./index.html">
+                <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
                 <span class='brand_solutions'>Solutions</span>
@@ -30,10 +30,10 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="/index.html">Home</a></li>
-                <li><a class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/services.html">Services</a></li>
-                <li><a aria-current="page" class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a class="nav_item" href="./index.html">Home</a></li>
+                <li><a class="nav_item" href="./about.html">About</a></li>
+                <li><a class="nav_item" href="./services.html">Services</a></li>
+                <li><a aria-current="page" class="nav_item" href="./projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -57,7 +57,7 @@
             <!-- projects cards -->
             <div class="case_carousel flex row">
                 <div class="case_card">
-                    <img class="card_image" src="/assets/images/video_edit.jpg"
+                    <img class="card_image" src="./assets/images/video_edit.jpg"
                         alt="image of video editing software program on an ultra wide screen">
 
                     <section class="card_article">
@@ -68,12 +68,12 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                            <a href="/projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
+                            <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
                 <div class="case_card">
-                    <img class="card_image" src="/assets/images/server.jpg"
+                    <img class="card_image" src="./assets/images/server.jpg"
                         alt="image of a server room. img ix is printed on the wall of the server">
                     <section class="card_article">
                         <h3 class="card_title">Ant Media</h3>
@@ -84,7 +84,7 @@
                             needed a reliable and efficient solution to keep up with their growing demands and ensure
                             their workflow remains smooth and seamless. With this in mind, they approached ByteSized
                             Solutions for help.</span>
-                            <a href="/projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
+                            <a href="./projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -112,17 +112,17 @@
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
                 <div class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <img src="./assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
                     <a class="brand" href="/index.html">
                         <span>ByteSized</span><br> Solutions
                     </a>
                 </div>
                 <ul class=" footer_nav_items flex row">
                     <li class="footer_nav_items_title">Navigation</li>
-                    <li><a class="nav_item" href="/index.html">Home</a></li>
-                    <li><a class="nav_item" href="/about.html">About</a></li>
-                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                    <li><a class="nav_item" href="./index.html">Home</a></li>
+                    <li><a class="nav_item" href="./about.html">About</a></li>
+                    <li><a class="nav_item" href="./about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="./projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
