--- a/projects/inked-productions.html
+++ b/projects/inked-productions.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteSized Solutions: Projects</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!--font awesome-->
 </head>
@@ -18,8 +18,8 @@
             <nav class="header flex container relative">
                 <!-- main brand logo -->
     
-                <a class="brand grid" href="/index.html">
-                    <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+                <a class="brand grid" href="../index.html">
+                    <img src="../assets/images/logo.svg" alt="brand logo" class="brand_icon">
                     <div>
                         <span>ByteSized</span><br>
                     <span class='brand_solutions'>Solutions</span>
@@ -31,11 +31,11 @@
                 <input type="checkbox" id="toggle" hidden>
     
                 <ul class=" nav_items flex">
-                    <li><a class="nav_item" href="/index.html">Home</a></li>
-                    <li><a  class="nav_item" href="/about.html">About</a></li>
-                    <li><a class="nav_item" href="/about.html">Services</a></li>
-                    <li><a aria-current="page" class="nav_item" href="/projects.html">Projects</a></li>
-                    <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
+                    <li><a class="nav_item" href="../index.html">Home</a></li>
+                    <li><a  class="nav_item" href="../about.html">About</a></li>
+                    <li><a class="nav_item" href="../about.html">Services</a></li>
+                    <li><a aria-current="page" class="nav_item" href="../projects.html">Projects</a></li>
+                    <li><a class="nav_item btn btn_pry" href="../about.html#contact">Get In Touch</a></li>
                 </ul>
             </nav>
         </header>
@@ -87,17 +87,17 @@
         <nav class="footer_nav flex row">
             <!-- main brand logo -->
             <div class="brand flex">
-                <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
-                <a class="brand" href="/index.html">
+                <img src="../assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                <a class="brand" href="../index.html">
                     <span>ByteSized</span><br> Solutions
                 </a>
             </div>
             <ul class=" footer_nav_items flex row">
                 <li class="footer_nav_items_title">Navigation</li>
-                <li><a class="nav_item" href="/index.html">Home</a></li>
-                <li><a class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/about.html/#services">Services</a></li>
-                <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a class="nav_item" href="../index.html">Home</a></li>
+                <li><a class="nav_item" href="../about.html">About</a></li>
+                <li><a class="nav_item" href="../about.html/#services">Services</a></li>
+                <li><a class="nav_item" href="../projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
