--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
         <nav class="header flex container relative">
             <!-- main brand logo -->
 
-            <a class="brand grid" href="/index.html">
-                <img src="/assets/images/logo.svg" alt="brand logo" class="brand_icon">
+            <a class="brand grid" href="./index.html">
+                <img src="./assets/images/logo.svg" alt="brand logo" class="brand_icon">
                 <div>
                     <span>ByteSized</span><br>
                     <span class='brand_solutions'>Solutions</span>
@@ -31,10 +31,10 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="/index.html">Home</a></li>
-                <li><a class="nav_item" href="/about.html">About</a></li>
-                <li><a aria-current="page" class="nav_item" href="/services.html">Services</a></li>
-                <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a class="nav_item" href="./index.html">Home</a></li>
+                <li><a class="nav_item" href="./about.html">About</a></li>
+                <li><a aria-current="page" class="nav_item" href="./services.html">Services</a></li>
+                <li><a class="nav_item" href="./projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
             <h2>Cloud Computing Solutions</h2>
             <article class="services_article_block  grid">
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
-                <img class='card_image' src="/assets/images/network_services_vector.jpg"
+                <img class='card_image' src="./assets/images/network_services_vector.jpg"
                     alt="2D vector image of cloud computing architecture">
 
                 <p class="credit">Image by fullvector on Freepik</p>
@@ -89,7 +89,7 @@
             <h2>Cyber Security and Data Protection</h2>
             <article class="services_article_block  grid">
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
-                <img class='card_image' src="/assets/images/security_services_vector.jpg"
+                <img class='card_image' src="./assets/images/security_services_vector.jpg"
                     alt="2D vector image of cyber security personel discussing.">
                 <p class="credit">Image by fullvector on Freepik</p>
 
@@ -118,7 +118,7 @@
 
             <article class="services_article_block  grid">
                 <h3>Making technology work for you, not the other way around.</h3>
-                <img class='card_image' src="/assets/images/network_services_vector.jpg"
+                <img class='card_image' src="./assets/images/network_services_vector.jpg"
                     alt="2D vector image of a network design">
                 <p class="credit">Image by fullvector on Freepik</p>
 
@@ -146,7 +146,7 @@
                     for just one person to handle.
 
                 </h3>
-                <img class='card_image' src="/assets/images/managed_it_services.jpg"
+                <img class='card_image' src="./assets/images/managed_it_services.jpg"
                     alt="2D vector image of IT workers doing routing checkup">
                 <p class="credit">Image by fullvector on Freepik</p>
 
@@ -174,7 +174,7 @@
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
                 <h3>The era of applications; a direct window to your customers</h3>
-                    <img class='card_image' src="/assets/images/software_services_vestor.jpg"
+                    <img class='card_image' src="./assets/images/software_services_vestor.jpg"
                         alt="vector image of software developers discussing">
                    
                     <p class="credit">Image by fullvector on Freepik</p>
@@ -211,7 +211,7 @@
             <h2>Quality Assurance and Testing</h2>
             <article class="services_article_block  grid">
                 <h3>Be reliable, stay reliable!</h3>
-                <img class='card_image' src="/assets/images/testing_services_vector.jpg"
+                <img class='card_image' src="./assets/images/testing_services_vector.jpg"
                     alt="vector image of people performing a software test">
                 <p class="credit">Image by pch.vector on Freepik</p>
 
@@ -239,17 +239,17 @@
             <nav class="footer_nav flex row">
                 <!-- main brand logo -->
                 <div class="brand flex">
-                    <img src="/assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
-                    <a class="brand" href="/index.html">
+                    <img src="./assets/images/logo_white.svg" alt="brand logo" class="brand_icon">
+                    <a class="brand" href="./index.html">
                         <span>ByteSized</span><br> Solutions
                     </a>
                 </div>
                 <ul class=" footer_nav_items flex row">
                     <li class="footer_nav_items_title">Navigation</li>
-                    <li><a class="nav_item" href="/index.html">Home</a></li>
-                    <li><a class="nav_item" href="/about.html">About</a></li>
-                    <li><a class="nav_item" href="/about.html/#services">Services</a></li>
-                    <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                    <li><a class="nav_item" href="./index.html">Home</a></li>
+                    <li><a class="nav_item" href="./about.html">About</a></li>
+                    <li><a class="nav_item" href="./about.html/#services">Services</a></li>
+                    <li><a class="nav_item" href="./projects.html">Projects</a></li>
                     <li><a class="nav_item btn btn_pry cta" href="#contact">Get In Touch</a></li>
                 </ul>
             </nav>
